# CaptainsLog

./: Author.cpp  Author.h  CMakeLists.txt  ChangeCalculator.cpp  ChangeCalculator.h  ChangeProvider.cpp  ChangeProvider.h  Commit.cpp  Commit.h  Date.cpp  Date.h  Delta.cpp  Delta.h  Format.cpp  Format.h  Git.cpp  Git.h  PathDelta.cpp  PathDelta.h  README.md  RankType.h  Settings.cpp  Settings.h  main.cpp
